回滚部分多余的修改